tests/snapshots/snapshots__budget_cmdk_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 3 → level 0 (2 words)

command-score.ts
index.tsx
